Add processing of gzip input files
This change allows processing of gzip input files (recognized by .z, .Z, .gz or .GZ filename extensions).  However, mysql is unable to LOAD DATA from such files, so they would need to be gunzip'd anyway.